--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,24 +8,24 @@ body {
 
 @layer base {
   :root {
-    --background: 80 20% 94%;
+    --background: 80 20% 96%;
     --foreground: 80 10% 20%;
-    --card: 80 20% 98%;
+    --card: 80 20% 100%;
     --card-foreground: 80 10% 20%;
-    --popover: 80 20% 98%;
+    --popover: 80 20% 100%;
     --popover-foreground: 80 10% 20%;
     --primary: 79 35% 55%;
     --primary-foreground: 80 10% 10%;
-    --secondary: 80 20% 88%;
+    --secondary: 80 20% 92%;
     --secondary-foreground: 80 10% 20%;
-    --muted: 80 20% 88%;
+    --muted: 80 20% 92%;
     --muted-foreground: 80 10% 45%;
     --accent: 79 40% 65%;
     --accent-foreground: 80 10% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 80 15% 80%;
-    --input: 80 15% 85%;
+    --border: 80 15% 85%;
+    --input: 80 15% 90%;
     --ring: 79 35% 55%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
@@ -85,4 +85,10 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.leaflet-container {
+  height: 100%;
+  width: 100%;
+  z-index: 1;
 }
